fix: parse res body as arrayBuffer or blob in client
