# projects/src-dir/src/app/[a]/arrayBuffer/route.ts
@@ -1,0 +1,7 @@
+import { createRoute } from './frourio.server';
+
+export const { GET } = createRoute({
+  get: async () => {
+    return { status: 200, body: new ArrayBuffer(128) };
+  },
+});
